--- a/css/main.css
+++ b/css/main.css
@@ -636,57 +636,53 @@ img {
   cursor: pointer;
 }
 
-/* .social-networks {
+.social-networks {
   display: flex;
   justify-content: center;
-
-  &-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    background-color: $light-color;
-
-    transition: background-color $duration $timing-function;
-
-    &:hover,
-    &:focus {
-      background-color: $accent-color;
-    }
-
-    .footer & {
-      background-color: rgba(255, 255, 255, 0.1);
-
-      transition: background-color $duration $timing-function;
-    }
-  }
-
-  &-item:not(:last-child) {
-    margin-right: 10px;
-  }
-
-  &-svg {
-    width: 20px;
-    height: 20px;
-    fill: $social-networks-color;
-
-    transition: fill $duration $timing-function;
-
-    .social-networks-link:hover &,
-    .social-networks-link:focus & {
-      fill: $light-color;
-    }
-
-    .footer & {
-      width: 20px;
-      height: 20px;
-      fill: $light-color;
-    }
-  }
 }
- */
+
+.social-networks-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-networks-link:hover, .social-networks-link:focus {
+  background-color: #2196f3;
+}
+
+.footer .social-networks-link {
+  background-color: rgba(255, 255, 255, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-networks-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.social-networks-svg {
+  width: 20px;
+  height: 20px;
+  fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-networks-link:hover .social-networks-svg,
+.social-networks-link:focus .social-networks-svg {
+  fill: #ffffff;
+}
+
+.footer .social-networks-svg {
+  width: 20px;
+  height: 20px;
+  fill: #ffffff;
+}
+
 /* .subscribe {
   padding-top: 72px;
   padding-bottom: 94px;
@@ -872,7 +868,7 @@ img {
   cursor: pointer;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main_section_1/hero-bg-mobile.jpg);
   }
@@ -908,17 +904,46 @@ img {
   }
 }
 
-/* .advantages {
-  display: flex;
-  flex-wrap: wrap;
+@media screen and (min-width: 768px) {
+  .advantages {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
 
-  &-item {
+@media screen and (min-width: 768px) {
+  .advantages-item {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .advantages-item {
     width: 270px;
-    height: 251px;
+  }
+}
 
-    &:not(:last-child) {
-      margin-right: 30px;
-    }
+@media screen and (max-width: 767px) {
+  .advantages-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .advantages-item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .advantages-item:nth-child(4n + 1), .advantages-item:nth-child(4n + 2) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .advantages-item:nth-child(4n + 1), .advantages-item:nth-child(4n + 3) {
+    margin-right: 30px;
   }
 }
 
@@ -929,41 +954,60 @@ img {
   line-height: 1.143;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+}
 
-  &::before {
-    content: "";
-    display: block;
-    width: 270px;
-    height: 120px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-color: $team-color;
-    border-radius: 4px;
-    margin-bottom: 30px;
-
-    .attention & {
-      background-image: url(../images/svg/antenna.svg);
-    }
-    .punctuality & {
-      background-image: url(../images/svg/clock.svg);
-    }
-    .planning & {
-      background-image: url(../images/svg/diagram.svg);
-    }
-    .technologies & {
-      background-image: url(../images/svg/astronaut.svg);
-    }
+@media screen and (min-width: 320px) {
+  .advantages-list-title {
+    text-align: center;
   }
 }
 
+.advantages-list-title::before {
+  content: "";
+  display: block;
+  height: 120px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  margin-bottom: 30px;
+  /* @media screen and (max-width: 767px) {
+      width: 450px;
+    }
+
+    @media screen and (min-width: 768px) {
+      width: 354px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 270px;
+    } */
+}
+
+.attention .advantages-list-title::before {
+  background-image: url(../images/svg/antenna.svg);
+}
+
+.punctuality .advantages-list-title::before {
+  background-image: url(../images/svg/clock.svg);
+}
+
+.planning .advantages-list-title::before {
+  background-image: url(../images/svg/diagram.svg);
+}
+
+.technologies .advantages-list-title::before {
+  background-image: url(../images/svg/astronaut.svg);
+}
+
 .advantages-list-item {
-  height: 75px;
+  /* height: 75px; */
   font-weight: normal;
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
 }
- */
+
 @media screen and (min-width: 320px) and (max-width: 1199px) {
   .works-section {
     display: none;
@@ -1016,58 +1060,106 @@ img {
   }
 }
  */
-/* .team {
-  display: flex;
-  flex-wrap: wrap;
-
-  &-section {
-    height: 708px;
-    background-color: $team-color;
-
-    &-title {
-      margin-bottom: 50px;
-      font-weight: bold;
-      font-size: 36px;
-      line-height: 1.167;
-      text-align: center;
-      letter-spacing: 0.03em;
-    }
-  }
-
-  &-list-item {
-    width: 270px;
-    height: 428px;
-    padding-bottom: 30px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-    background: $light-color;
-
-    &:not(:last-child) {
-      margin-right: 30px;
-    }
-  }
-
-  &-list-title {
-    margin-top: 30px;
-    margin-bottom: 10px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.187;
-    text-align: center;
-    letter-spacing: 0.03em;
-  }
-
-  &-list-job {
-    margin-bottom: 16px;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 1.187;
-    text-align: center;
-    letter-spacing: 0.03em;
+@media screen and (min-width: 768px) {
+  .team {
+    display: flex;
+    flex-wrap: wrap;
   }
 }
- */
+
+.team-section {
+  /* height: 708px; */
+  background-color: #f5f4fa;
+}
+
+.team-section-title {
+  font-weight: bold;
+  text-align: center;
+  font-weight: bold;
+  letter-spacing: 0.03em;
+}
+
+@media screen and (max-width: 1199px) {
+  .team-section-title {
+    margin-bottom: 30px;
+    font-size: 28px;
+    line-height: 1.177;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-section-title {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.167;
+  }
+}
+
+.team-list-item {
+  padding-bottom: 24px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  background: #ffffff;
+  /* @media screen and (max-width: 767px) {
+      width: 450px;
+      height: 622px;
+    }*/
+  /* @media screen and (min-width: 768px) {
+      width: 354px;
+      height: 536px;
+    } */
+}
+
+@media screen and (min-width: 1200px) {
+  .team-list-item {
+    width: 270px;
+    height: 428px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .team-list-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-list-item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team-list-item:nth-child(4n + 1), .team-list-item:nth-child(4n + 2) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team-list-item:nth-child(4n + 1), .team-list-item:nth-child(4n + 3) {
+    margin-right: 30px;
+  }
+}
+
+.team-list-title {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.187;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.team-list-job {
+  margin-bottom: 16px;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.187;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
 /* .clients-section-title {
   margin-bottom: 50px;
   font-weight: bold;
