--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -425,57 +425,53 @@ img {
   }
 }
 
-/* .social-networks {
+.social-networks {
   display: flex;
   justify-content: center;
-
-  &-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    background-color: $light-color;
-
-    transition: background-color $duration $timing-function;
-
-    &:hover,
-    &:focus {
-      background-color: $accent-color;
-    }
-
-    .footer & {
-      background-color: rgba(255, 255, 255, 0.1);
-
-      transition: background-color $duration $timing-function;
-    }
-  }
-
-  &-item:not(:last-child) {
-    margin-right: 10px;
-  }
-
-  &-svg {
-    width: 20px;
-    height: 20px;
-    fill: $social-networks-color;
-
-    transition: fill $duration $timing-function;
-
-    .social-networks-link:hover &,
-    .social-networks-link:focus & {
-      fill: $light-color;
-    }
-
-    .footer & {
-      width: 20px;
-      height: 20px;
-      fill: $light-color;
-    }
-  }
 }
- */
+
+.social-networks-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-networks-link:hover, .social-networks-link:focus {
+  background-color: #2196f3;
+}
+
+.footer .social-networks-link {
+  background-color: rgba(255, 255, 255, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-networks-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.social-networks-svg {
+  width: 20px;
+  height: 20px;
+  fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-networks-link:hover .social-networks-svg,
+.social-networks-link:focus .social-networks-svg {
+  fill: #ffffff;
+}
+
+.footer .social-networks-svg {
+  width: 20px;
+  height: 20px;
+  fill: #ffffff;
+}
+
 /* .subscribe {
   padding-top: 72px;
   padding-bottom: 94px;
