--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -1,13 +1,40 @@
-/* .advantages {
-  display: flex;
-  flex-wrap: wrap;
+.advantages {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 
   &-item {
-    width: 270px;
-    height: 251px;
+    @media screen and (min-width: 768px) {
+      width: 354px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 270px;
+    }
 
     &:not(:last-child) {
-      margin-right: 30px;
+      @media screen and (max-width: 767px) {
+        margin-bottom: 30px;
+      }
+
+      @media screen and (min-width: 1200px) {
+        margin-right: 30px;
+      }
+    }
+
+    &:nth-child(4n + 1),
+    &:nth-child(4n + 2) {
+      @media screen and (min-width: 768px) and (max-width: 1199px) {
+        margin-bottom: 30px;
+      }
+    }
+
+    &:nth-child(4n + 1),
+    &:nth-child(4n + 3) {
+      @media screen and (min-width: 768px) and (max-width: 1199px) {
+        margin-right: 30px;
+      }
     }
   }
 }
@@ -20,16 +47,31 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
 
+  @media screen and (min-width: 320px) {
+    text-align: center;
+  }
+
   &::before {
     content: "";
     display: block;
-    width: 270px;
     height: 120px;
     background-repeat: no-repeat;
     background-position: center;
     background-color: $team-color;
     border-radius: 4px;
     margin-bottom: 30px;
+
+    /* @media screen and (max-width: 767px) {
+      width: 450px;
+    }
+
+    @media screen and (min-width: 768px) {
+      width: 354px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 270px;
+    } */
 
     .attention & {
       background-image: url(../images/svg/antenna.svg);
@@ -47,10 +89,9 @@
 }
 
 .advantages-list-item {
-  height: 75px;
+  /* height: 75px; */
   font-weight: normal;
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
 }
- */
