--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -66,7 +66,7 @@
   } */
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .hero {
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
