--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,32 +1,79 @@
-/* .team {
-  display: flex;
-  flex-wrap: wrap;
+.team {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 
   &-section {
-    height: 708px;
+    /* height: 708px; */
     background-color: $team-color;
 
     &-title {
-      margin-bottom: 50px;
       font-weight: bold;
-      font-size: 36px;
-      line-height: 1.167;
       text-align: center;
+      font-weight: bold;
       letter-spacing: 0.03em;
+
+      @media screen and (max-width: 1199px) {
+        margin-bottom: 30px;
+        font-size: 28px;
+        line-height: 1.177;
+      }
+
+      @media screen and (min-width: 1200px) {
+        margin-bottom: 50px;
+        font-size: 36px;
+        line-height: 1.167;
+      }
     }
   }
 
   &-list-item {
-    width: 270px;
-    height: 428px;
-    padding-bottom: 30px;
+    padding-bottom: 24px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     background: $light-color;
 
+    /* @media screen and (max-width: 767px) {
+      width: 450px;
+      height: 622px;
+    }*/
+
+    /* @media screen and (min-width: 768px) {
+      width: 354px;
+      height: 536px;
+    } */
+
+    @media screen and (min-width: 1200px) {
+      width: 270px;
+      height: 428px;
+    }
+
     &:not(:last-child) {
-      margin-right: 30px;
+      @media screen and (max-width: 767px) {
+        margin-bottom: 30px;
+      }
+    }
+
+    &:not(:last-child) {
+      @media screen and (min-width: 1200px) {
+        margin-right: 30px;
+      }
+    }
+
+    &:nth-child(4n + 1),
+    &:nth-child(4n + 2) {
+      @media screen and (min-width: 768px) and (max-width: 1199px) {
+        margin-bottom: 30px;
+      }
+    }
+
+    &:nth-child(4n + 1),
+    &:nth-child(4n + 3) {
+      @media screen and (min-width: 768px) and (max-width: 1199px) {
+        margin-right: 30px;
+      }
     }
   }
 
@@ -49,4 +96,3 @@
     letter-spacing: 0.03em;
   }
 }
- */
